--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ngrx/store": "^17.1.1",
     "@ngrx/store-devtools": "^17.1.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
+    "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.6",
     "tslib": "^2.3.0",
